2005-11-21 19:47 Mike Park  <mike.park@nasa.gov>

	* src/px_main.c (main) added new command line argument -q to set
	the geometry order. Only optimize volume if order > 2.
	* src/px_main.c (gridDumpBentEdgesForPX) to allow geometry up to
	and including 4th order.

2005-11-20 20:30 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: added a final sweep to remove
	unused nodes at any cost and untangle.

2005-11-18  9:04 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerRemoveUnused) choose neighboring
	node with best cost for collapse selection.

2005-11-17 18:23 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerUnusedNodes,gridedgerUnusedNode) 
	created to expose remaining unused nodes for post processing.
	* src/gridedger.c (gridedgerPack,gridedgerSortNode) implemented
	for unused nodes to allow renumbering (for tecplot, GridEx, etc.)
	* src/gridedger.c (gridedgerRemoveUnused) fixed bug that saved
	unused nodes collapsed away instead of only remaining nodes.
	
2005-11-17 17:29 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerRemoveUnused) try either node to
	collapse unused edges. don't return null if unable to collapse.
	keep remaining unused. should try best?
	* src/unit_main.c (main) --phase -1: limit cost to prohibit
	invalid elements.

2005-11-17 12:21 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretizeSupport) to construct
	aans use a refined support edge durring ideal discretization.

2005-11-16 21:41 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (main) --phase -1: replace 
	gridedgerDiscretizeEvenly with gridedgerDiscretizeOnce.

2005-11-16 21:32 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretizeOnce) ready to test.

2005-11-16 21:29 Mike Park  <mike.park@nasa.gov>

	* src/gridedger.c (gridedgerDiscretizeOnce) to create the
	`ideal' locations locations in one step and avoid iterative
	shooting. I just found a bug I'm fixing, but I wanted to